@@ -1,0 +1,35 @@
+/*
+ * Copyright 2017 Guardtime, Inc.
+ *
+ * This file is part of the Guardtime client SDK.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License").
+ * You may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES, CONDITIONS, OR OTHER LICENSES OF ANY KIND, either
+ * express or implied. See the License for the specific language governing
+ * permissions and limitations under the License.
+ * "Guardtime" and "KSI" are trademarks or registered trademarks of
+ * Guardtime, Inc., and no license to trademarks is granted; Guardtime
+ * reserves and retains all trademark rights.
+ */
+package com.guardtime.ksi.concurrency;
+
+import org.testng.Assert;
+import org.testng.annotations.Test;
+
+import java.util.concurrent.ThreadPoolExecutor;
+
+public class DefaultExecutorServiceProviderTest {
+
+    @Test
+    public void testExecutorServicePoolCustomSize() {
+        int customPoolSize = 30;
+        System.setProperty("executor.pool.size", String.valueOf(customPoolSize));
+        ThreadPoolExecutor threadPoolExecutor = (ThreadPoolExecutor) DefaultExecutorServiceProvider.getExecutorService();
+        Assert.assertEquals(threadPoolExecutor.getMaximumPoolSize(), customPoolSize);
+    }
+}
